added error handling,refactored