@@ -1,15 +1,14 @@
 package com.rob.app.student.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
-import com.rob.app.department.domain.Department;
 import com.rob.app.department.exception.DepartmentNotFoundException;
 import com.rob.app.department.repository.DepartmentRepository;
 import com.rob.app.student.data.StudentDTO;
 import com.rob.app.student.domain.Student;
+import com.rob.app.student.exception.StudentNotFoundException;
 import com.rob.app.student.repository.StudentRepository;
 
 @Service
@@ -24,22 +23,31 @@ public class StudentServiceImpl implements StudentService {
 
     @Override
     public StudentDTO createStudent(StudentDTO student) {
-        Student s = new Student();
-        Department d = departmentRepository.findById(student.departmentId())
-                .orElseThrow(() -> new DepartmentNotFoundException(student.departmentId()));
-        s.setAge(student.age());
-        s.setName(student.name());
-        s.setLastName(student.lastName());
-        s.setDepartment(d);
-        studentRepository.save(s);
-        return Student.toStudentDTO(s);
+        return departmentRepository.findById(student.departmentId())
+            .map(department -> student.toStudent(department))
+            .map(studentRepository::save)
+            .map(Student::toStudentDTO)
+            .orElseThrow(() -> new DepartmentNotFoundException(student.departmentId()));
     }
 
     @Override
     public List<StudentDTO> listStudents() {
-        List<Student> students = studentRepository.findAll();
-        return students.stream().map(Student::toStudentDTO)
-                .collect(Collectors.toList());
+        return studentRepository.findAll().stream().map(Student::toStudentDTO)
+                .toList();
+    }
+
+    @Override
+    public StudentDTO getStudentById(Long id) {
+        return studentRepository.findById(id)
+            .map(Student::toStudentDTO)
+            .orElseThrow(() -> new StudentNotFoundException(id));
+    }
+
+    @Override
+    public void deleteStudent(Long id) {
+        Student student = studentRepository.findById(id).
+            orElseThrow(() -> new StudentNotFoundException(id));
+        studentRepository.deleteById(student.getId());
     }
 
 }
